examples/failing-examples/bound-vs-free.golden
In Phase: p0
    Syntax error from macro:
    #[bound-vs-free.kl:20.39-20.67]<"variables must be distinct">
